--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,18 @@
   --color-bg-dark: RGB(248, 248, 248);
   --color-grey: #d1d1d1;
   --color-text: #22243b;
+  --color-accent: RGB(68, 70, 84);
 
   --text-main: "Open Sans", sans-serif;
 }
 
 * {
   box-sizing: border-box;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -32,4 +38,9 @@ button {
   border: none;
   outline: none;
   padding: 0;
+}
+
+button:hover {
+  background-color: var(--color-accent);
+  cursor: pointer;
 }
