Implement videos UI

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,13 @@ button:hover {
   background-color: var(--color-accent);
   cursor: pointer;
 }
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+p {
+  margin: 0;
+}
