--- a/src/components/VideoCard/VideoCard.module.css
+++ b/src/components/VideoCard/VideoCard.module.css
@@ -34,6 +34,7 @@
     color: var(--color-text);
     word-break: break-all;
     max-width: 180px;
+    font-size: 0.9rem;
 }
 
 .channel, .viewHour {
