--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -2,7 +2,8 @@
     width:100%;
     height:100%;
     overflow-y: auto;
-
     padding: 1rem;
     background-color: rgb(224, 224, 96);
+    flex-grow: 1;
 }
+
