--- a/src/components/VideoCard/VideoCard.module.css
+++ b/src/components/VideoCard/VideoCard.module.css
@@ -32,7 +32,7 @@
     font-family: var(--text-main);
     font-weight: bold;
     color: var(--color-text);
-    word-break: break-all;
+    word-break: keep-all;
     max-width: 180px;
     font-size: 0.9rem;
 }
