Fixed infinite scrolling and css bugs

--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -1,9 +1,14 @@
 .videoContainer {
     width:100%;
     height:100%;
-    overflow-y: auto;
+    min-height: 0;
     padding: 1rem;
     background-color: rgb(224, 224, 96);
     flex-grow: 1;
 }
 
+.observer {
+    width: 100%;
+    height: 200px;
+    background-color: black;
+}
