--- a/src/components/Root/Root.module.css
+++ b/src/components/Root/Root.module.css
@@ -1,7 +1,6 @@
 .root {
-    width:100%;
-    height:100%;
+    
     display: flex;
     flex-direction: column;
-    flex: 1 1 auto;
+    background-color: black;
 }
