--- a/src/components/VideoRow/VideoRow.module.css
+++ b/src/components/VideoRow/VideoRow.module.css
@@ -1,6 +1,7 @@
 .videoRow {
     display: flex;
-    justify-content: space-evenly;
-    height: 34%;
-    padding-bottom: 1rem;
+    justify-content: space-between;
+    width: 100%;
+    height: 290px;
+    margin-bottom: 1rem;
 }
