--- a/src/components/VideoSearchCard/VideoSearchCard.module.css
+++ b/src/components/VideoSearchCard/VideoSearchCard.module.css
@@ -20,8 +20,9 @@
 .title {
     display: -webkit-box;
     -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 450px;
     font-size: 1.5rem;
     font-weight: bold;
 }
@@ -44,7 +45,7 @@
 }
 
 .channelTitle {
-    padding-left: 1rem;
+    padding-left: 0.5rem;
     font-size: 0.9rem;
 }
 
@@ -52,8 +53,12 @@
     margin-top:1rem;
     display: -webkit-box;
     -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    word-break: break-all;
     text-overflow: ellipsis;
-    max-width: 450px;
+    max-width: 550px;
+    max-height: 50px;
     font-size: 0.9rem;
     font-weight: lighter;
 }
