--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -34,6 +34,8 @@
     font-weight: bold;
     color: var(--color-text);
     font-family: var(--text-main);
+    cursor: pointer;
+    user-select: none;
 }
 
 .loginBtn {
