--- a/src/components/VideoDetail/VideoDetail.module.css
+++ b/src/components/VideoDetail/VideoDetail.module.css
@@ -136,7 +136,14 @@ iframe {
 }
 
 .sideBar {
-    width: 300px;
-    height: 830px;
+    width: 380px;
     background-color: orchid;
+    overflow-y: auto;
+}
+
+.sideBarTitle {
+    background-color: aqua;
+    top:0px;
+    font-weight: bold;
+    font-size: 1.3rem;
 }
