Fix Infinite scrolling bugs

--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -12,3 +12,11 @@
     height: 200px;
     background-color: black;
 }
+
+.videoRow {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    height: 290px;
+    margin-bottom: 1rem;
+}
