--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,10 +1,12 @@
 .navbar {
-    background-color: chartreuse;
+    background-color: var(--color-bg);
     width:100%;
     height: 3rem;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .container {
@@ -36,15 +38,5 @@
     font-family: var(--text-main);
     cursor: pointer;
     user-select: none;
-}
-
-.loginBtn {
-    margin-right: 1rem;
-    height: 30px;
-    width: 50px;
-    border-radius: 8px;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: bold;
-    background-color: var(--color-bg-dark);
 }
 
