--- a/src/components/SideBar/SideBar.module.css
+++ b/src/components/SideBar/SideBar.module.css
@@ -1,5 +1,5 @@
 .sideBar {
-    background-color: rgb(106, 218, 218);
+    background-color: var(--color-bg);
     padding:0.1rem;
     transform: translateX(-60px);
     transition: all 300ms ease-in;
