--- a/src/components/SideBarBtn/SideBarBtn.module.css
+++ b/src/components/SideBarBtn/SideBarBtn.module.css
@@ -1,5 +1,5 @@
 .btn {
-    background-color: brown;
+    background-color: var(--color-bg);
     width: 100%;
     height: 55px;
     display: flex;
