--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -3,20 +3,6 @@
     height:100%;
     min-height: 0;
     padding: 1rem;
-    background-color: rgb(224, 224, 96);
+    background-color: var(--color-bg);
     flex-grow: 1;
-}
-
-.observer {
-    width: 100%;
-    height: 200px;
-    background-color: black;
-}
-
-.videoRow {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 290px;
-    margin-bottom: 1rem;
 }
