--- a/src/components/VideoDetail/VideoDetail.module.css
+++ b/src/components/VideoDetail/VideoDetail.module.css
@@ -1,15 +1,16 @@
 .container {
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
-    color: white;
+    color: var(--color-text);
     margin:0.3rem;
 }
 
 .videoContainer {
-    background-color: skyblue;
     width:1300px;
     padding: 1rem;
 }
@@ -22,7 +23,6 @@ iframe {
 .detailContainer {
     width: 100%;
     height: 50px;
-    background-color: bisque;
     display:flex;
     justify-content: center;
     align-items: center;
@@ -61,7 +61,6 @@ iframe {
 }
 
 .menuContainer {
-    background-color: aquamarine;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -69,6 +68,7 @@ iframe {
 }
 
 .likeBtn {
+    background-color: var(--color-accent);
     width: 100px;
     height: 30px;
     border-radius: 12px 0 0 12px;
@@ -78,6 +78,7 @@ iframe {
 }
 
 .dislikeBtn {
+    background-color: var(--color-accent);
     border-left: 1px solid grey;
     width: 50px;
     height: 30px;
@@ -88,14 +89,15 @@ iframe {
 }
 
 .descriptionContainer {
+    background-color: var(--color-accent);
+    border-radius: 8px;
     width: 100%;
-    height: 50px;
-    background-color: grey;
     margin: 1rem 0;
+    padding-left: 0.5rem;
 }
 
 .descriptionContainer:hover {
-    background-color: rgb(71, 69, 69);
+    filter:brightness(90%);
 }
 
 .viewHour {
@@ -111,8 +113,8 @@ iframe {
     -webkit-box-orient: vertical;
     overflow: hidden;
     word-break: break-all;
-    text-overflow: ellipsis;
-}
+    max-width: 90%;
+} 
 
 .showMore {
     font-weight: bold;
@@ -121,7 +123,6 @@ iframe {
 
 .comments {
     width: 100%;
-    background-color: orange;
 }
 
 .commentsInfo::after {
@@ -136,15 +137,29 @@ iframe {
 }
 
 .sideBar {
-    width: 380px;
+    width: 400px;
     height: 830px;
-    background-color: orchid;
+    border: 2px solid var(--color-accent);
+    border-radius: 8px;
     overflow-y: auto;
 }
 
 .sideBarTitle {
-    background-color: aqua;
     top:0px;
     font-weight: bold;
     font-size: 1.3rem;
+    padding-left: 1rem;
+}
+
+.readMoreBtn {
+    font-weight: bold;
+    color: black;
+    background-color: transparent;
+    font-size: 0.8rem;
+    text-decoration:underline;
+    cursor: pointer;
+}
+
+.readMore {
+    -webkit-line-clamp: initial;
 }
