Working on responsive design

--- a/src/components/Video/Video.module.css
+++ b/src/components/Video/Video.module.css
@@ -1,8 +1,14 @@
-.videoContainer {
+.videoSection {
     width:100%;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+.videoContainer {
     height:100%;
     min-height: 0;
     padding: 1rem;
     background-color: var(--color-bg);
-    flex-grow: 1;
 }
