--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,6 +3,7 @@
     width:100%;
     height: 3rem;
     display: flex;
+    justify-content: space-between;
     align-items: center;
     position: sticky;
     top: 0;
