--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -2,12 +2,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 35%;
     position: relative;
-    transform: translateX(130%);
 }
 
 .searchBar {
-    width: 400px;
+    width: 100%;
     height: 35px;
     outline:none;
     border: 1px solid grey;
