--- a/src/components/VideoSearchResult/VideoSearchResult.module.css
+++ b/src/components/VideoSearchResult/VideoSearchResult.module.css
@@ -2,13 +2,19 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .videoCards {
-    width: 100%;
+    width: 850px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
+
+@media (max-width: 850px) {
+    .videoCards {
+        width:100%;
+    }
+}
+
