--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -3,8 +3,8 @@
     width:100%;
     height: 3rem;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
     position: sticky;
     top: 0;
     z-index: 1;
@@ -18,6 +18,7 @@
 }
 
 .toggle {
+    color:var(--color-text);
     border-radius: 50%;
     height: 25px;
     width: 25px;
@@ -41,3 +42,8 @@
     user-select: none;
 }
 
+@media (max-width: 850px) {
+    .navbar {
+        justify-content: space-between;
+    }
+}
