--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -2,8 +2,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 35%;
-    position: relative;
+    width: 25%;
+    max-width: 400px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .searchBar {
@@ -25,4 +28,13 @@
     justify-content: center;
     align-items: center;
     background-color: var(--color-bg-dark);
+}
+
+@media (max-width: 850px) {
+    .searchBarContainer {
+        position: relative;
+        left: 0%;
+        transform: translateX(-10%);
+        min-width: 200px;
+    }
 }
