--- a/src/components/SideBarBtn/SideBarBtn.module.css
+++ b/src/components/SideBarBtn/SideBarBtn.module.css
@@ -1,5 +1,6 @@
 .btn {
     background-color: var(--color-bg);
+    color:var(--color-text);
     width: 100%;
     height: 55px;
     display: flex;
