--- a/src/components/VideoCard/VideoCard.module.css
+++ b/src/components/VideoCard/VideoCard.module.css
@@ -1,5 +1,5 @@
 .videoCard {
-    width: 19%;
+    width: 100%;
     min-width: 18%;
     height: 100%;
     display: flex;
@@ -17,7 +17,7 @@
 
 .thumnail {
     width:100%;
-    height: 60%;
+    height: 192px;
     border-radius: 8px;
     object-fit: cover;
 }
