--- a/src/components/VideoDetail/VideoDetail.module.css
+++ b/src/components/VideoDetail/VideoDetail.module.css
@@ -1,8 +1,15 @@
+.videoDetailSection {
+    display:flex;
+    width:100%;
+    background-color: var(--color-bg);
+}
 .container {
     display: flex;
     justify-content: center;
     width: 100%;
     height: 100%;
+    color: var(--color-text);
+    background-color: var(--color-bg);
 }
 
 h1 {
@@ -11,13 +18,22 @@ h1 {
 }
 
 .videoContainer {
-    width:1300px;
+    width:1100px;
     padding: 1rem;
 }
 
-iframe {
-    width: 100%;
-    height: 650px;
+.iframeContainer {
+    position:relative; padding-bottom:56.25%;
+}
+
+.iframeContainer iframe {
+    position: absolute;
+    top: 0;
+    left: 0 ;
+    right: 0;
+    bottom: 0;
+    width:100%;
+    height: 100%;
 }
 
 .detailContainer {
@@ -121,6 +137,10 @@ iframe {
     background-color: transparent;
 }
 
+.response {
+    display: none;
+}
+
 .comments {
     width: 100%;
 }
@@ -136,21 +156,6 @@ iframe {
     background-color: grey;
 }
 
-.sideBar {
-    width: 400px;
-    height: 830px;
-    border: 2px solid var(--color-accent);
-    border-radius: 8px;
-    overflow-y: auto;
-}
-
-.sideBarTitle {
-    top:0px;
-    font-weight: bold;
-    font-size: 1.3rem;
-    padding-left: 1rem;
-}
-
 .readMoreBtn {
     font-weight: bold;
     color: black;
@@ -158,8 +163,25 @@ iframe {
     font-size: 0.8rem;
     text-decoration:underline;
     cursor: pointer;
+    color: var(--color-text);
 }
 
 .readMore {
     -webkit-line-clamp: initial;
+}
+
+
+
+@media (max-width: 900px) {
+
+    .container {
+    }
+
+    .default {
+        display: none;
+    }
+
+    .response {
+        display: block;
+    }
 }
