--- a/src/components/VideoSearchCard/VideoSearchCard.module.css
+++ b/src/components/VideoSearchCard/VideoSearchCard.module.css
@@ -1,20 +1,23 @@
-
 .videoCard {
     display: flex;
-    width: 50%;
+    border-radius: 12px;
+    overflow: hidden;
+    width: 100%;
+    height: 200px;
     margin: 1rem 1rem;
 }
 
 .videoImg {
-    width: 350px;
-    height: 220px;
-    object-fit: cover;
+    width:40%;
+    height:100%;
+    border-radius: 12px;
 }
 
 .videoDetails {
-    width: 700px;
-    height: 220px;
+    width: 60%;
+    height: 100%;
     padding: 1.5rem 1rem;
+    color: var(--color-text);
 }
 
 .title {
@@ -23,12 +26,12 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: bold;
 }
 
 .viewHour {
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     font-weight: lighter;
 }
 
@@ -39,14 +42,14 @@
 
 .channelLogo {
     background-color: aqua;
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     border-radius: 100%;
 }
 
 .channelTitle {
     padding-left: 0.5rem;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
 }
 
 .detail {
@@ -57,8 +60,33 @@
     overflow: hidden;
     word-break: break-all;
     text-overflow: ellipsis;
-    max-width: 550px;
-    max-height: 50px;
-    font-size: 0.9rem;
+    width: 100%;
+    font-size: 0.8rem;
     font-weight: lighter;
+}
+
+@media (max-width: 750px) {
+    .videoCard {
+        flex-direction: column;
+        width: 75%;
+        height: 300px;
+    }
+
+    .videoImg {
+        min-width: 100%;
+        height: 60%;
+        border-radius: 12px;
+        object-fit: cover;
+    }
+
+    .videoDetails {
+        width: 100%;
+        height: 40%;
+        padding: 0;
+    }
+
+    .detail {
+        margin-top: 0.3rem;
+        font-size: 0.7rem;
+    }
 }
