--- a/src/components/VideoDetail/VideoDetail.module.css
+++ b/src/components/VideoDetail/VideoDetail.module.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    height: 100%;
+    height: fit-content;
     color: var(--color-text);
     background-color: var(--color-bg);
 }
@@ -143,6 +143,7 @@ h1 {
 
 .comments {
     width: 100%;
+    height: 100%;
 }
 
 .commentsInfo::after {
@@ -173,9 +174,6 @@ h1 {
 
 
 @media (max-width: 900px) {
-
-    .container {
-    }
 
     .default {
         display: none;
