--- a/src/components/CommentFrame/Comment/Comment.module.css
+++ b/src/components/CommentFrame/Comment/Comment.module.css
@@ -1,9 +1,6 @@
 .container {
-    position: relative;
-    box-sizing: content-box;
-    margin-top: 1rem;
+    margin-bottom: 1rem;
     width: 100%;
-
     background-color: antiquewhite;
     display: flex;
 }
