--- a/src/components/VideoWatchFrame/VideoWatchFrame.module.css
+++ b/src/components/VideoWatchFrame/VideoWatchFrame.module.css
@@ -1,25 +1,11 @@
-.videoDetailSection {
-    display:flex;
-    width:100%;
-    background-color: var(--color-bg);
-}
-.container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    height: fit-content;
-    color: var(--color-text);
-    background-color: var(--color-bg);
-}
-
 h1 {
     color: var(--color-text);
     margin:0.3rem;
 }
 
 .videoContainer {
-    width:1100px;
-    padding: 1rem;
+    /* width:1100px;
+    padding: 1rem; */
 }
 
 .iframeContainer {
@@ -132,54 +118,31 @@ h1 {
     max-width: 90%;
 } 
 
-.showMore {
-    font-weight: bold;
-    background-color: transparent;
-}
-
-.response {
-    display: none;
-}
-
-.comments {
-    width: 100%;
-    height: 100%;
-}
-
-.commentsInfo::after {
-    content: "";
-    display:block;
-    position: relative;
-    height: 2px;
-    width: 98%;
-    left:50%;
-    transform: translateX(-50%);
-    background-color: grey;
-}
-
-.readMoreBtn {
-    font-weight: bold;
-    color: black;
-    background-color: transparent;
-    font-size: 0.8rem;
-    text-decoration:underline;
-    cursor: pointer;
-    color: var(--color-text);
-}
-
 .readMore {
-    -webkit-line-clamp: initial;
+    font-weight: bold;
+    background-color: transparent;
 }
-
-
 
 @media (max-width: 900px) {
 
-    .default {
-        display: none;
+    .detailContainer {
+        flex-direction: column-reverse;
+        align-items: start;
+        height: 100px;
     }
 
-    .response {
-        display: block;
+    .channelTitle {
+        font-size: 0.7rem;
+        font-weight: bold;
+    }
+    .channelSubscriber {
+        font-weight: lighter;
+        font-size: 0.8rem;
+    }
+
+    h1 {
+        font-size: 1rem;
+        color: var(--color-text);
+        margin:0.3rem;
     }
 }
