--- a/src/components/VideoSearchFrame/VideoSearchCard/VideoSearchCard.module.css
+++ b/src/components/VideoSearchFrame/VideoSearchCard/VideoSearchCard.module.css
@@ -6,6 +6,12 @@
     height: 200px;
     margin: 1rem 1rem;
     cursor: pointer;
+    transition: all 250ms ease-in;
+}
+
+.videoCard:hover {
+    transform: scale(1.01);
+    cursor: pointer;
 }
 
 .videoImg {
