--- a/src/components/VideoWatchFrame/VideoWatchFrame.module.css
+++ b/src/components/VideoWatchFrame/VideoWatchFrame.module.css
@@ -3,11 +3,6 @@ h1 {
     margin:0.3rem;
 }
 
-.videoContainer {
-    /* width:1100px;
-    padding: 1rem; */
-}
-
 .iframeContainer {
     position:relative; padding-bottom:56.25%;
 }
@@ -79,6 +74,11 @@ h1 {
     align-items: center;
 }
 
+.likeBtn:hover, .dislikeBtn:hover {
+    cursor: pointer;
+    filter:brightness(90%);
+}
+
 .dislikeBtn {
     background-color: var(--color-accent);
     border-left: 1px solid grey;
@@ -118,9 +118,18 @@ h1 {
     max-width: 90%;
 } 
 
-.readMore {
+.readMoreBtn {
     font-weight: bold;
+    color: black;
     background-color: transparent;
+    font-size: 0.8rem;
+    text-decoration:underline;
+    cursor: pointer;
+    color: var(--color-text);
+}
+
+.readMore {
+    -webkit-line-clamp: initial;
 }
 
 @media (max-width: 900px) {
